--- a/src/app/components/login-signup/login-signup.component.html
+++ b/src/app/components/login-signup/login-signup.component.html
@@ -9,7 +9,7 @@
                             <img *ngIf = "urlAddress.includes('teacher')" [src]="teacherImage" alt=""/>
                             <div  class = "card-body">
                                     <h5 class = "card-title">Sign up</h5>
-                                    <form enctype="multipart/form-data" (ngSubmit)="onSubmit($event)"> 
+                                    <form enctype="multipart/form-data" (ngSubmit)="onSubmitSignup($event)"> 
                                         <div class = "mb-3">
                                             <label class="form-label"  for="name">{{user}} Name</label>
                                             <input class="form-control" type = "text" id="name" name="name" autoFocus/>                                      
@@ -20,12 +20,16 @@
                                         </div>
                                         <div class = "mb-3">
                                             <label class="form-label" for="country" >Country of Origin</label>
-                                            <select class="form-select" data-flag="true" >
+                                            <select  id="nationality" name="nationality" class="form-select" data-flag="true" >
                                                 <option value="other">Select country...</option>
                                                 <option *ngFor="let country of countryList">{{country}}</option>                                             
                                                 <option value="other">OTHER</option>
                                             </select>                                      
                                         </div>     
+                                        <div class = "mb-3" *ngIf = "urlAddress.includes('teacher')">
+                                            <label class="form-label" for="statement">Personal Statement</label>
+                                            <textarea class="form-control" type = "text" id="statement" name="statement" placeholder="Tell your students a little bit about yourself..."></textarea>                                            
+                                        </div>                             
                                         <div class = "mb-3">
                                             <label class="form-label" for="password">Password</label>
                                             <input class="form-control" type = "password" id="password" name="password" />                                            
@@ -53,16 +57,16 @@
                             <img *ngIf = "urlAddress.includes('teacher')" [src]="teacherImage" alt=""/>
                             <div  class = "card-body">
                                 <h5 class = "card-title">Login</h5>
-                                <form>                          
+                                <form (ngSubmit)="onSubmitLogin($event)">                          
                                     <div class = "mb-3">
                                         <label class="form-label" for="studentEmail">Email</label>
-                                        <input class="form-control" type = "input" id="studentEmail" name="studentEmail" />                                      
+                                        <input class="form-control" type = "input" id="email" name="email" />                                      
                                     </div>                                          
                                     <div class = "mb-3">
                                         <label class="form-label" for="password">Password</label>
                                         <input class="form-control" type = "password" id="password" name="password"  />                                            
                                     </div>                              
-                                    <button class = "btn btn-secondary col-12">Login</button>
+                                    <button type = "submit" class = "btn btn-secondary col-12">Login</button>
                                 </form> 
                             </div>
                         </div>
