--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,4 +1,5 @@
 <!-- <div> -->
+    <button (click) = "logout();" routerLink="/welcome" *ngIf = "currentUser" id = "logOutButton" mat-mini-fab style="position:absolute; top:-10px; right:-10px" #tooltip="matTooltip" matTooltip="Log out"><mat-icon>exit_to_app</mat-icon></button>
     <div class="container"  style="display:flex; flex-wrap:wrap; text-align:center; justify-content: center;"> 
         <div *ngIf="!currentUser" class="mb-5 mt-5">                            
             <img class="mb-4 " src="https://www.pngfind.com/pngs/m/610-6104451_image-placeholder-png-user-profile-placeholder-image-png.png" alt="" style="border-radius:50%; width:100%; display: flex; align-items: center; justify-content: center; text-align:center;"/>
@@ -10,7 +11,7 @@
             <h1 *ngIf = "currentUser.level && currentUser.userType === 'Student'" class="text-center text-warning"> <fa-icon [icon]="faStar"></fa-icon> {{currentUser.level.substring(0, 2)}}  <fa-icon [icon]="faStar"></fa-icon></h1>
         </div> 
         <div *ngFor = "let item of menuItems">
-            <button id = "navButton" *ngIf="item.use.includes(currentUser.userType) || (!currentUser) && item.use.includes('Student')" mat-raised-button [color]="item.routerLink === activePage ? 'accent' : 'primary'" class = "mb-4 mt-1" style="height:48px; width: 210px !important; font-size:18px; display: flex; align-items: center; justify-content: center;" [routerLink]="currentUser ? item.routerLink : '/student/login-signup'" (click)="!currentUser && openSnackBarLogin(item.name)"> <fa-icon [icon]="item.icon"></fa-icon>  <span class="d-none d-lg-inline">{{item.name}}</span></button>
+            <button id = "navButton" *ngIf="item.use.includes(currentUser?.userType) || (!currentUser) && item.use.includes('Student')" mat-raised-button [color]="item.routerLink === activePage ? 'accent' : 'primary'" class = "mb-4 mt-1" style="height:48px; width: 210px !important; font-size:18px; display: flex; align-items: center; justify-content: center;" [routerLink]="currentUser ? item.routerLink : '/student/login-signup'" (click)="!currentUser && openSnackBarLogin(item.name)"> <fa-icon [icon]="item.icon"></fa-icon>  <span class="d-none d-lg-inline">{{item.name}}</span></button>
 
             <!-- <div class="dropdown">
                 <button type="button" class="btn btn-secondary btn-lg mt-1 mb-3 dropdown-toggle mx-auto d-block" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="width:75%">My Account</button>
