--- a/src/app/components/exam-display-individual/exam-display-individual.component.html
+++ b/src/app/components/exam-display-individual/exam-display-individual.component.html
@@ -6,6 +6,7 @@
         <h3>{{data.exam.examDescription}}</h3><hr>        
         <mat-vertical-stepper [linear]="false" #stepper [animationDuration]="'200'">
             <mat-step *ngFor="let question of data.exam.Questions; let i=index;">
+                <ng-template matStepLabel>{{question.questionName}}</ng-template>
                 <h2>{{question.questionName}}</h2> 
                 <h4>{{question.questionDescription}}</h4>
                 <p class="m-3 p-3 border border-dark">{{question.questionPrompt}}</p>
@@ -26,9 +27,31 @@
                     </div>
 
                 </form>
-                <div *ngIf ="findStudentResponse(question)" > <br> <b>Student Response:</b> {{findStudentResponse(question)}}</div>
+                <div *ngIf ="findStudentResponse(question)" >
+                    <br> <b>Student Response:</b> {{findStudentResponse(question)}} <br>                     
+                </div>
+                <div *ngIf = "data.user?.userType==='Teacher' && !findTeacherFeedback(question)" >
+                    <hr>
+                    <mat-form-field   class="example-full-width">
+                        <textarea (change)  = "updateTeacherFeedback(question,$event)" matInput placeholder="Write your teacher feedback here..."></textarea>
+                    </mat-form-field>  
+                </div>  
                 <div *ngIf ="findTeacherFeedback(question)" > <br> <b>Teacher Feedback:</b> {{findTeacherFeedback(question)}}</div>
                 <div *ngIf ="findResponseScore(question)" > <br> <b>Question Score: </b> {{findResponseScore(question)}} / {{question.points}}</div>
+            </mat-step>
+            <mat-step  *ngIf = "data.user?.userType==='Teacher'">
+                <ng-template matStepLabel>Done</ng-template>
+                <mat-form-field  class="example-full-width" *ngIf = !findFinalScore()>
+                    <input matInput placeholder="Final Score" id="finalScore">
+                </mat-form-field>  
+                <mat-form-field   class="example-full-width"  *ngIf = !findFinalScore()>
+                    <textarea matInput placeholder="Final comments" id="finalComments"></textarea>
+                </mat-form-field> 
+                <div *ngIf = findFinalScore()>
+                    <b>Final Comments: </b> <br>
+                    <p class="m-3 p-3 border border-dark">{{finalComments}}</p> <br>
+                    <b>Score: </b> {{score}}
+                </div> 
             </mat-step>
             <!-- <mat-step>
                 <ng-template matStepLabel>Done</ng-template>
@@ -44,6 +67,7 @@
     <mat-dialog-actions align="end">
     <button mat-button mat-dialog-close>Cancel</button>  
     <button mat-raised-button color="primary" (click)="submitStudentResponses()" *ngIf = "data.user?.userType==='Student'" [mat-dialog-close]="true" cdkFocusInitial>Submit Exam</button>
+    <button mat-raised-button color="primary" (click)="submitFeedback()" *ngIf = "data.user?.userType==='Teacher'" [mat-dialog-close]="true" cdkFocusInitial>Submit Feedback</button>
     <!-- <button mat-raised-button color="primary" *ngIf = "currentUser?.userType==='Teacher'" [mat-dialog-close]="true" cdkFocusInitial>Submit Feedback</button> -->
     </mat-dialog-actions>
 </div>
