--- a/src/app/components/homepage/homepage.component.html
+++ b/src/app/components/homepage/homepage.component.html
@@ -1,3 +1,4 @@
+<!-- <div class="container" style="background-color:#202142;"> -->
 <div class="container">
     <app-header></app-header>
     <div class="d-flex flex-row">             
